--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,3 +3,7 @@
 github: [devinschumacher]
 liberapay: devinschumacher
 open_collective: devinschumacher
+custom: [
+"https://devinschumacher.com",
+"https://serp.co",
+]
